@@ -28,10 +28,8 @@ and quirks that I need to fix eventually.
 - draganddrop patch
 - ditch aelfred
 - deferred loading API for macro handlers
-- resplit action, to restore last split configuration
 - autosave directory option
 - S+INS, etc in swing controls
-- run last macro command
 - quick copy into vertical selection: keep a tall caret
 - vfs: a way of running awt requests not all at end
 - wrapped dock buttons broken
